04-SaasModelTemplate/01-InfraStack.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: This template creates Public Subnets, Internet Gateway, NAT Gateway and updates the Route Table
Parameters: 
  VPCID:
    Type: String
    Default: "10.0.0.0/20"
    Description: Please provide a valid CIDR for VPC
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
  SubnetA:
    Type: String
    Default: "10.0.0.0/22"
    Description: Please provide a valid CIDR for Subnet-A
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
  SubnetB:
    Type: String
    Default: "10.0.4.0/22"
    Description: Please provide a valid CIDR for Subnet-B
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"

Resources:
  S3:
    Type: AWS::S3::Bucket
    Properties: 
      BucketName: sknaresh2000repo
      WebsiteConfiguration: 
        IndexDocument: index.html
  S3BucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref S3
      PolicyDocument: 
        Statement:
          - 
            "Sid": "S3BucketPolicy"
            "Action": 
              - "s3:GetObject"
            "Effect": "Allow"
            "Resource": !Join ["",["arn:aws:s3:::",!Ref S3,"/*"]]
            "Principal": 
              AWS:
                - "*"

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCID
  IGW:
    Type: AWS::EC2::InternetGateway
  IGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref IGW
      VpcId: !Ref VPC

  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0,!GetAZs ]
      CidrBlock: !Ref SubnetA
      MapPublicIpOnLaunch: True
      VpcId: !Ref VPC
  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1,!GetAZs ]
      CidrBlock: !Ref SubnetB
      MapPublicIpOnLaunch: True
      VpcId: !Ref VPC

  PublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  PublicRoute:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref IGW
      RouteTableId: !Ref PublicSubnetRouteTable
  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PublicSubnetRouteTable
      SubnetId: !Ref PublicSubnetA
  PublicSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PublicSubnetRouteTable
      SubnetId: !Ref PublicSubnetB

  EIPSubnetA:
    Type: AWS::EC2::EIP
    Properties: 
      Domain: vpc
  EIPSubnetB:
    Type: AWS::EC2::EIP
    Properties: 
      Domain: vpc
  NATGatewayA:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt EIPSubnetA.AllocationId
      SubnetId: !Ref PublicSubnetA
  NATGatewayB:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt EIPSubnetB.AllocationId
      SubnetId: !Ref PublicSubnetB
  PrivateSubnetARouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  PrivateSubnetBRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  PrivateSubnetARoute:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NATGatewayA
      RouteTableId: !Ref PrivateSubnetARouteTable
  PrivateSubnetBRoute:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NATGatewayB
      RouteTableId: !Ref PrivateSubnetBRouteTable

Outputs:
  VPCInfo:
    Value: !Ref VPC
    Description: Logical ID of Internet Gateway VPC
    Export:
      Name: infra-vpc
  InternetGateway:
    Value: !Ref IGW
    Description: Logical ID of Internet Gateway
  S3BucketURL:
    Value: !GetAtt S3.WebsiteURL
    Description: S3 Website URL
    Export:
      Name: infra-s3-websiteurl
  NATGatewayA:
    Value: !Ref NATGatewayA
    Description: Logical ID of NAT Gateway-A
  NATGatewayB:
    Value: !Ref NATGatewayB
    Description: Logical ID of NAT Gateway-B
  PrivateRouteTableA:
    Value: !Ref PrivateSubnetARouteTable
    Description: Logical ID of Private Route Table-A
    Export:
      Name: infra-prvtrta
  PrivateRouteTableB:
    Value: !Ref PrivateSubnetBRouteTable
    Description: Logical ID of Private Route Table-B
    Export:
      Name: infra-prvtrtb
  PublicRouteTable:
    Value: !Ref PublicSubnetRouteTable
    Description: Logical ID of Public Route Table
    Export:
      Name: infra-publicrt
